# matrix-premid

./: .env.example  .envrc  .flake8  .gitignore  .pre-commit-config.yaml  .prettierrc  Makefile  README.rst  config.template.json  matrix_premid.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: integration.yml  test.yml
docker/: conduwuit.toml  test_integration.py
etc/: matrix-premid.service  matrix-premid.service.template
scripts/: tampermonkey_script.js
src/matrix_premid/: __main__.py
tests/: test_parser.py  test_provider_config.py  test_updater.py
